<resources>
    <string name="app_name">AfyaSmart</string>
    <string name="home_activity_text">Home Activity</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="sign_in_text">Sign In</string>
    <string name="register_prompt">Don\'t have an account yet?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="doctors_avatar_text">Doctors Avatar</string>
    <string name="doctors_text">Doctors</string>
    <string name="diseases_avatar_text">Diseases Avatar</string>
    <string name="diseases_text">Diseases</string>
    <string name="messages_avatar_text">Messages Avatar</string>
    <string name="messages_text">Messages</string>
    <string name="blog_text">Blog</string>
    <string name="blog_avatar_text">Blog Avatar</string>
    <string name="logout_text">Logout</string>
    <string name="home_text">Home</string>
    <string name="user_avatar_text">User Avatar</string>
    <string name="email_address_hint">Email Address …</string>
    <string name="name_hint">Name…</string>
    <string name="description_hint">Description …</string>
    <string name="add_disease_text">Add Disease</string>
    <string name="post_image_text">Post Image</string>
    <string name="title_hint">Title…</string>
    <string name="body_hint">Body…</string>
    <string name="add_post_text">Add Post</string>
    <string name="request_permission_text">Request Permission</string>
    <string name="permission_content">The application requires some permissions to be able to perform the expected functionality. If you don\'t accept the permission the application might not work as promised, the application needs access to your gallery, internet and others as you will be requested from the dialogs grant the access please</string>
    <string name="grant_permission_btn_text">Grant Permission</string>
    <string name="favourite_image_text">Favourite Image</string>
    <string name="zero">0</string>
    <string name="profile_text">Profile</string>
    <string name="accounts_text">Accounts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_circle_drawable_text">Account Circle Drawable</string>
    <string name="contact_hint">Contact…</string>
    <string name="user_roles_avatar_text">User Roles Avatar</string>
    <string name="patient_text">Patient</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="something_about_you_hint">Something about you…</string>
    <string name="update_profile_text">Update Profile</string>
    <string name="all_users_text">All Users</string>
    <string name="front_room_text">Front Room</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="notifications_text">Notifications</string>
    <string name="role_text">Role…</string>
    <string name="message_default">Your message should go here…</string>
    <string name="message_hint">Message…</string>
    <string name="send_icon_text">Send Icon</string>
    <string name="vertical_more_text">Vertical More</string>
    <string name="chat_room_text">Chat Room</string>
    <string name="post_excerpt_text">Insights of the post that the user can go through and understand what the post is all about</string>
    <string name="area_of_expertise_hint">Area of Expertise…</string>
    <string name="send_request_text">Send Request</string>
    <string name="claim_a_doctor_text">Claim A Doctor</string>
    <string name="doctor_warning_text">You will be vetted by the relevant application authorities to verify whether you are who you claim and whether you are really of help to the system, there after your role might change to doctor where you can access extra privileges and ability to advice on your area of expertise or any other case that you have tangible experience, please don\'t even think of lying to us, cause we will catch up with you smart ass.</string>
    <string name="caption_text">Caption…</string>
    <string name="warning_text">You are about to switch a users role, which means you are either going go give / revoke certain abilities to crucial parts of the system, please ensure that the correct procedure is followed</string>
    <string name="change_role_text">Change Role</string>
    <string name="switch_role_title_text">Switch Role</string>
    <string name="sample_symptoms_count">20 symptoms</string>
    <string name="sample_measures_count">30 Measures</string>
    <string name="sample_area_of_expertise">Gynaecologist</string>
    <string-array name="roles">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
    </string-array>
    <string name="disease_name_guidelines">Give a common name for the disease, it should be more that three characters in size</string>
    <string name="disease_description_guidelines">A verbose clear description for the disease you are adding in at least 100 characters, use correct grammar</string>
    <string name="adding_a_disease_text">Adding a disease…</string>
    <string name="edit_disease_text">Edit Disease</string>
    <string name="delete_disease_text">Delete Disease</string>
    <string name="search_disease_text">Search Disease</string>
    <string name="search_disease_hint">Search Disease…</string>
    <string name="top_most_award_hint">Top Most Award…</string>
    <string name="trained_institution_hint">Trained Institution…</string>
    <string name="currently_working_where_hint">Currently Working Where…</string>
    <string name="profession_history_hint">Profession History…</string>
    <string name="doctors_information_text">Doctors Information</string>
    <string name="send_request_hint">Sending Request…</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="add_measure_text">Add Measure</string>
    <string name="add_symptom_text">Add Symptom</string>
    <string name="period_hint">Period…</string>
    <string name="period_hint_info">At which stage of the infection do the symptoms show or after how long?</string>
    <string name="symptom_body_help">Precise verbose description of the symptom</string>
</resources>