<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:orderInCategory="101"
        android:title="@string/home_text" />
    <item
        android:id="@+id/doctorsFragment"
        android:icon="@drawable/ic_supervisor_account"
        android:orderInCategory="102"
        android:title="@string/doctors_text" />
    <item
        android:id="@+id/diseasesFragment"
        android:icon="@drawable/ic_warning"
        android:orderInCategory="103"
        android:title="@string/diseases_text" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_chat_bubble"
        android:orderInCategory="103"
        android:title="@string/messages_text" />
    <item
        android:id="@+id/postsFragment"
        android:icon="@drawable/ic_forum"
        android:orderInCategory="103"
        android:title="@string/blog_text" />
</menu>