<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/diseasesFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.diseases.DiseasesFragment"
        android:label="@string/diseases_text"
        tools:layout="@layout/diseases_fragment">
        <action
            android:id="@+id/action_diseasesFragment_to_addDiseaseFragment"
            app:destination="@id/addDiseaseFragment" />
    </fragment>
    <fragment
        android:id="@+id/doctorsFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.doctors.DoctorsFragment"
        android:label="@string/doctors_text"
        tools:layout="@layout/doctors_fragment" />
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.messages.MessagesFragment"
        android:label="@string/messages_text"
        tools:layout="@layout/messages_fragment" />
    <fragment
        android:id="@+id/postsFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.posts.PostFragment"
        android:label="@string/blog_text"
        tools:layout="@layout/post_fragment">
        <action
            android:id="@+id/action_postsFragment_to_addPostFragment"
            app:destination="@id/addPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDiseaseFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.diseases.AddDiseaseFragment"
        android:label="@string/add_disease_text"
        tools:layout="@layout/fragment_add_disease" />
    <fragment
        android:id="@+id/addPostFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.posts.AddPostFragment"
        android:label="@string/add_disease_text"
        tools:layout="@layout/fragment_add_post" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile_text"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.mysasse.afyasmart.ui.fragments.profile.EditProfileFragment"
        android:label="@string/edit_profile_text"
        tools:layout="@layout/fragment_edit_profile" />

</navigation>