<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/doctors_card_view"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_columnWeight="1"
            android:background="@drawable/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/doctors_avatar_text"
                    android:src="@drawable/ic_supervisor_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/doctors_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/diseases_card_view"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:background="@drawable/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/diseases_avatar_text"
                    android:src="@drawable/ic_warning" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/diseases_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/messages_card_view"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_columnWeight="1"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/messages_avatar_text"
                    android:src="@drawable/ic_chat_bubble" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/messages_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/blog_card_view"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/blog_avatar_text"
                    android:src="@drawable/ic_forum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/blog_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>